--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^7.13.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -101,6 +102,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "webpack": "^3.8.1"
   }
